--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="container-fluid">
         <div class="section-header">
             <h2>关于</h2>
-            <p>网页代码编辑软件为WebStorm<br>3D建模适用软件Cinema 4D R16<br>3D模型展示基于Three.js开源库<br>Email:funteen@qq.com<br>Copyright©2017-2018 西藏大学 杨建. All Rights Reserved</p>
+            <p>网页代码编辑软件为WebStorm<br>3D建模适用软件Cinema 4D R16<br>3D模型展示基于github3D显示插件<br>Email:funteen@qq.com<br>Copyright©2017-2018 西藏大学 杨建. All Rights Reserved</p>
         </div>
 </section>
 <!--关于-->
